mule-user-guide/v/3.7/windows-gateway-services-guide.adoc
= Windows Gateway Services Guide

*Select*

*Latest version: 1.9.0*

:keywords: anypoint studio, esb, connector, endpoint, windows gateway

Windows Gateway Services provides connectivity to proprietary functionality on the Windows platform, and is used by the following connectors:

* link:/mule-user-guide/v/3.7/msmq-connector-user-guide[MSMQ connector]
* link:/mule-user-guide/v/3.7/windows-powershell-connector-guide[PowerShell Connector]
* link:/mule-user-guide/v/3.7/microsoft-dynamics-crm-connector[Dynamics CRM Connector]
* link:/mule-user-guide/v/3.7/microsoft-dynamics-ax-2012-connector[Dynamics AX Connector]

The Windows Gateway leverages the following technologies and frameworks:

* link:http://www.asp.net/web-api[ASP.NET Web API] exposes an HTTP web API that sends and receives raw messages.
* link:http://owin.org/[OWIN] provides the HTTP layer. Open Web Interface for .NET (OWIN) is an open specification for decoupling applications from web server functionality, which provides a layer for making all the HTTP concerns independent of the hosting platform.
* link:http://www.asp.net/vnext/overview/owin-and-katana[Katana] provides the OWIN Microsoft implementation, which handles self and IIS hosting for OWIN applications.

Release Notes:

* link:/release-notes/windows-gateway-services-release-notes[Windows Gateway Services Release Notes]

== Installing the Windows Gateway Services

Prerequisites:

* Windows 2008 Server, Windows 2008 R2 Server, Windows 2012 Server
* .NET Framework 4.5 and newer

Installation steps:

. Download the Windows Gateway Services installer from link:https://repository-master.mulesoft.org/nexus/content/repositories/releases/org/mule/modules/anypoint-windows-gateway-service/1.9.0/anypoint-windows-gateway-service-1.9.0.zip[here]. Unzip the software distribution.
. Double-click the `AnyPoint-Windows-Gateway-Service.exe` file.  
. Click *Options* to change the installation location, or click *Install* to start the installation. 
. If you plan to use the MSMQ and/or PowerShell connectors along with the Gateway, then copy the Authentication Token that is displayed for later use when you configure the connection at Anypoint Studio, otherwise skip this step. After you copy the token, click *Install*.
. After the installation completes, the installer gives you the option to view the `readme.txt` file with additional instructions. 
. Click *Finish* to exit.
. The installation creates the new *Anypoint Gateway* Windows service, which the installer starts.

image:AnypointGateway.png[AnypointGateway]

To view the running service in Windows 7, when the Control Panel *View by* option is set to *Small icons*, click *Control Panel* > *Administrative Tools* > *Services*. The service appears as:

image:ServicesTool.png[ServicesTool]

== Configuring the Anypoint Gateway

The default install location for the Windows Service is `c:\Program Files(x86)\Anypoint Gateway for Windows` unless you have choosen another folder when installed it. This folder contains the `Mule.SelfHost.exe` executable, the `Mule.SelfHost.exe.config` configuration file and PowerShell scripts to automate configuration tasks.

*Note*: If the configuration file doesn't appear in the folder, in Windows 7, when the Control Panel *View by* option is set to *Small icons*, click *Control Panel* > *Folder Options* > *View* > *Show hidden files, folders, and drives.*

The executable starts a new web server at port 9333 (default), which only accepts secure connections using HTTPS. You can change the port number where the gateway listens in the following places within the `Mule.SelfHost.exe.config` configuration file:

[source, xml, linenums]
----
<appSettings>
    <!-- Configure the service to listen on the following address. -->
    <add key="OwinHostAddress" value="https://+:9333/"/>
    .
    .
</appSettings>
.
.
<system.serviceModel>
    <services>
      <service behaviorConfiguration="routing"
          name="System.ServiceModel.Routing.RoutingService">
        <host>
          <baseAddresses>
            <add baseAddress="https://*:9333/router"/>
          </baseAddresses>
    .
    .
</system.serviceModel>
----

This web server uses a self-signed SSL certificate auto-generated during installation. The certificate is in the *Personal* folder of the *Local Computer* certificate store:

image:MMC_Personal_Certs.png[MMC_Personal_Certs]

Because the Windows service relies on `http.sys` for self-hosting the web server, changes in the port number or SSL certificate requires reconfiguring Windows. The `Register-SslCert.ps1` PowerShell script in the installation directory handles this task. If the port or certificate changes, run the following command from a link:http://en.wikipedia.org/wiki/Windows_PowerShell[PowerShell] console:

`Register-SslCert.ps1 <certificate-thumbprint> <windows-account> <port>`

* `<certificate-thumbprint>`: The thumbprint of the SSL certificate. It must be stored in the Personal Folder of the Local Store Account.
* `<windows-account>`: Windows User or Group that receives permissions to register the port. The account impersonating the Windows service or console application must be part of this group.
* `<port>`: HTTP port – Must be *9333* (default) - Or the port you have set at the configuration file.

Example:

`Register-SslCert.ps1 a495cbf8c4af496f1ef81efb224c8097d039f922 everyone 9333`

== Configuring connectors related settings

=== MSMQ & PowerShell connectors

==== Security Considerations

For these connectors, running in the Mule ESB, the service first authenticates the call by inspecting the HTTP Authorization header as specified in the link:https://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.8[RFC 2616].

As said, the authentication is done through this unique security token used by both connectors. This token is included on every HTTP request to the Gateway using the Mule scheme. The following example shows how MSMQ leverages the Gateway to connect to a specific queue sending the security token as specified in this section (the same authorization header applies for PowerShell):

[source, code, linenums]
----
GET: https://localhost:9333/msmq?count=50
Authorization: mule 3nGdw7W+G1fSO2YBEHDmpo4N1Tg=
Mule-Msmq-Queue-Name: .\private$\out
Mule-Api-Version: 1
----

The authorization token should match on the connector and the Gateway configuration file. The following configuration setting shows how the token is set within the Gateway configuration file  `Mule.SelfHost.exe.config` :

[source, xml, linenums]
----
<appSettings>
    <!-- Token that must be sent by the Mule connector's client in the Authorization header when accessing the Rest Api. -->
    <add key="mule-auth-token" value="3nGdw7W+G1fSO2YBEHDmpo4N1Tg="/>
</appSettings>
----

When you configure the connectors running in the Mule ESB, the authorization token value should be set at the `'Gateway Access Token'` configuration setting (`accessToken` attribute at the connector's XML configuration).

*Note*: The installer for the Windows Gateway service automatically generates a cryptographically secure token for use by callers upon first install. This token is displayed and placed upon the clipboard during installation for easy copying into a Mule application.

==== Impersonating a Windows User

Users executing the call on behalf of a Gateway-served connector authenticate through two custom HTTP headers, `mule-impersonate-username` and `mule-impersonate-password`. 

These two headers represent the Windows credentials of an existing user in the Active Directory forest where the Windows Gateway service is running, or a local account on the machine hosting the service. When these HTTP headers are included in an HTTP Request, the Windows Gateway service authenticates and impersonates this user before executing the operation required by the connector. This provides the ability to configure the correct access control list permissions using Windows credentials.

==== MSMQ specific

The following diagram shows the interaction of the MSMQ connector with the Gateway, along with the main components used:

image:WindowsGateway.png[WindowsGateway]

===== Configuration settings

In the following table you can find the configuration settings that are only related to the MSMQ connector:

[cols=",",]
|===
|*Property* |*Usage*
|*invalid-queue-name* |The queue name where unreadable messages are moved to.
|*transaction-timeout* |The timeout for processing messages since they got retrieved by the connector. When the cleanup task finds a message which timeout expired it moves the message to the main queue to be available back again (for details check two phase commit section at the connector's guide).
|*invalid-message-timeout* |The timeout for invalid messages for when a payload of a message is parsed with an incorrect formatter.
|*cleanup-delay* |The delay of the cleanup task to start looking for expired messages after they got retrieved for processing (for details check two phase commit section at the connector's guide).
|===

===== Impersonating a Windows User

When your queue is marked to require authentication then you can impersonate the caller user as specified above (in the same general section). In addition to this, if you work with a remote queue the connector has a particular header to override this behavior (for details check the connector's guide).

===== Load Balanced Configuration

Windows Gateway Services supports running in a load-balanced configuration to allow for fault tolerance. When running multiple gateway services instances, each member should be configured to perform MSMQ background jobs at a non-overlapping interval.

MSMQ background job processing is by default performed every 10 minutes starting at zero minutes past the hour. To prevent multiple gateway instances simultaneously attempting to perform cleanup on the queues when running in load-balanced configuration, a setting called cleanup-delay should be specified on each gateway instance. The recommended value to use for this on each machine is (10 / instanceCount) * (instanceNumber - 1) where instanceNumber is an integer value 1..n.
For example, a cluster of 2 machines would use cleanup-delay of 0 on machine 1, 5 on machine 2. A cluster of 3 machines would use cleanup-delay of 0 on machine 1, 3 on machine 2, and 6 on machine 3. Machine clocks should be synchronized by NTP or equivalent mechanism to ensure this offset is applied correctly.

The cleanup-delay setting is found in the Mule.SelfHost.config file:

[source, xml, linenums]
----
<appSettings>
    <!-- MSMQ: Delay in minutes to launch the cleanup process for sub-queues -->
    <add key="cleanup-delay" value="0"/>
</appSettings>
----

*Note*: When running in LB configuration the gateway services should be configured to run as 'Administrator' when the nodes involved (MSMQ, gateways) are under a WORKGROUP but not joined to a DOMAIN. When joined to the same DOMAIN the permissions for each of the nodes and objects involved (queues) should be correctly set by the domain's administrator.

See link:/release-notes/msmq-connector-release-notes[MSMQ Connector Release Notes] for version information.

For more information on the MSMQ connector, see the link:/mule-user-guide/v/3.7/msmq-connector-user-guide[MSMQ Connector User Guide].

==== PowerShell specific

This connector has no specific configuration other than the general configuration regarding the <<Security Considerations>> that are described above.

For more information on the PowerShell connector, see the link:/mule-user-guide/v/3.7/windows-powershell-connector-guide[Windows PowerShell Connector Guide.]

=== Dynamics CRM & AX connectors

These connectors have specific service configuration within the `<system.serviceModel>` section of the `Mule.SelfHost.exe.config` configuration file. It is recommended not to modify this section at any circumstance as it contains necessary settings to provide the routing service to the related connectors.

In case you want to change the port where the service is provided you can do it by updating the `baseAddress` port number within the URL set there, and proceeding to register the certificate for SSL as described in the <<Configuring the Anypoint Gateway for Windows Service>> section to complete the change.

Below you can see the configuration section affecting these connectors:

[source, xml, linenums]
----
<system.serviceModel>
    <services>
      <service behaviorConfiguration="routing"
          name="System.ServiceModel.Routing.RoutingService">
        <host>
          <baseAddresses>
            <add baseAddress="https://*:9333/router"/>
          </baseAddresses>
    .
    .
</system.serviceModel>
----

==== CRM specific

This connector has no specific configuration other than the routing service configuration described above at the <<Dynamics CRM & AX connectors>> section.

See link:/release-notes/microsoft-dynamics-crm-connector-release-notes[Microsoft Dynamics CRM Release Notes] for version information.

For more information on the PowerShell connector, see the link:/mule-user-guide/v/3.7/microsoft-dynamics-crm-connector[Microsoft Dynamics CRM Connector Guide.]

==== AX specific

This connector has no specific configuration other than the routing service configuration described above at the <<Dynamics CRM & AX connectors>> section.

See link:/release-notes/microsoft-dynamics-ax-2012-connector-release-notes[Microsoft Dynamics AX Release Notes] for version information.

For more information on the PowerShell connector, see the link:/mule-user-guide/v/3.7/microsoft-dynamics-ax-2012-connector[Microsoft Dynamics AX Connector Guide.]

== Windows Gateway Service Troubleshooting

The Windows Gateway service leverages the built-in .NET tracing system. The basic premise is simple, tracing messages are sent through switches to listeners, which are tied to a specific storage medium. The listeners for the trace source used by the connector are available in the configuration file:

[source, xml, linenums]
----
<sharedListeners>
   <add name="console" type="System.Diagnostics.ConsoleTraceListener" />
   <add name="file" type="System.Diagnostics.TextWriterTraceListener" initializeData="Mule.Gateway.log" />
   <add name="etw" type="System.Diagnostics.Eventing.EventProviderTraceListener, System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="{47EA5BF3-802B-4351-9EED-7A96485323AC}" />
</sharedListeners>
 
<sources>
    <source name="Mule.Gateway">
        <listeners>
            <clear />
            <add name="console" />
            <add name="etw"/>
        </listeners>
    </source>
</sources> 
----

The previous example configures three listeners for the output console, for files, and for Event Tracing for Windows (ETW). The trace source for the connector `Mule.Gateway` is configured to output the traces to the console and ETW only.

=== Changing the Tracing Level

The Windows Gateway is configured by default to log everything, which is the *Verbose* level. Other possible levels are:

* *Error*: Output error handling messages
* *Warning*: Output warnings and error handling messages
* *Info*: Output informational messages, warnings and error handling messages
* *Off*: Disable tracing

You can configure the levels at switch level in the configuration file:

[source, xml, linenums]
----
<switches>
    <add name="Mule.Msmq" value="Verbose" />
</switches>
----

=== Event Tracing for Windows

Event Tracing for Windows (ETW) is a very efficient built-in publish and subscribe mechanism for doing event tracing at the kernel level. There is little overhead in using this feature compared to other traditional tracing solutions that rely on I/O for storing the traces in persistence storage such as files or databases. As a built-in mechanism in Windows, many of the operating systems services and components use this feature as well. For that reason, not only can you troubleshoot the application but also many of the OS components involved in the same execution.

In ETW, there are applications publishing events in queues (or providers) and other applications consuming events from those queues in real-time through ETW sessions. When an event is published in a provider, it goes nowhere unless there is a session collecting events on that queue. (The events are not persisted).

The tracing system in .NET includes a trace listener for ETW, `EventProviderTraceListener`, which you can configure with a session identifier, which ETW uses to collect traces:

[source, xml, linenums]
----
<sharedListeners>
   <add name="etw"type="System.Diagnostics.Eventing.EventProviderTraceListener, System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="{47EA5BF3-802B-4351-9EED-7A96485323AC}"/>
</sharedListeners>
----

In the example, the session is associated with this identifier: +
`{47EA5BF3-802B-4351-9EED-7A96485323AC}`

==== Collect Session Traces

To collect session traces:

. Open a Windows console and run this command to start a new session:
+
[source, code]
----
logman start mysession -p {47EA5BF3-802B-4351-9EED-7A96485323AC} -o etwtrace.etl -ets
----
+
. Run this command to stop the session:
+
[source, code]
----
logman stop mysession -ets
----
+
This generates the `etwtrace.etl` file with the tracing session data.
+
. Run this command to generate a human readable file:
+
[source, code]
----
tracerpt etwtrace.etl
----

This command transfers useful information into the `dumpfile.xml` text file. For more information, see link:http://technet.microsoft.com/en-us/library/cc732700.aspx[Tracerpt].
